<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" tools:ignore="MissingTranslation">Pebble Notifier</string>
    <string name="notification_title_hint" tools:ignore="MissingTranslation">My pebble notification title</string>
    <string name="notification_body_hint" tools:ignore="MissingTranslation">Notification body goes here! You can use any tasker variables such as %NTITLE for the notification title</string>
    <string name="body" tools:ignore="MissingTranslation">Body</string>
    <string name="title" tools:ignore="MissingTranslation">Title</string>
    <string name="mode" tools:ignore="MissingTranslation">Mode</string>
    <string name="accessibility_description" tools:ignore="MissingTranslation">This allows Pebble Notifier to forward notifications to your pebble!</string>
    <string name="application_icon" tools:ignore="MissingTranslation">Application Icon</string>
    <string name="accessability_error" tools:ignore="MissingTranslation">This application will not work by itself until you have enabled Pebble Notifier in the Accessibility settings. Tap here to go to the Accessibility settings!</string>
    <string name="show_only_notifications" tools:ignore="MissingTranslation">Send only notifications</string>
    <string name="tasker_notice" tools:ignore="MissingTranslation">Please note that the last settings for this application was set by Tasker. Your Tasker settings will overwrite everything you set here.</string>
    <string name="loading_applications" tools:ignore="MissingTranslation">Loading Applications</string>
    <string name="fetch_detailed_notifications" tools:ignore="MissingTranslation">Fetch Detailed notifications for apps</string>

    <string-array name="mode_choices" tools:ignore="MissingTranslation">
        <item>Off</item>
        <item>Exclude selected apps</item>
        <item>Include ONLY selected apps</item>
    </string-array>

    <string-array name="filter_mode_choices" tools:ignore="MissingTranslation">
        <item>Filter if contains</item>
        <item>Filter if does not contain</item>
    </string-array>

    <string name="menu_uncheck_all">Uncheck All</string>
    <string name="menu_save">Save</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_donate">Donate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="pref_notif_screen_on">Notify when screen is on</string>
    <string name="pref_notif_screen_on_summ">If this is set, then notifications will be sent to the Pebble when the phone\'s screen is on.</string>
    <string name="pref_cat_dnd">Do Not Disturb Options</string>
    <string name="pref_cat_gen">General Options</string>
    <string name="pref_notif_only_summ">If disabled Android Toasts will also be sent to your Pebble</string>
    <string name="pref_notif_only">Notifications only</string>
    <string name="pref_fetch_notif_extras_summ">Some older or skinned android handsets modify the notification
        structure. If you are not getting proper notifications or are crashing, turn this off!
    </string>
    <string name="pref_fetch_notif_extras">Fetch detailed notifications</string>
    <string name="pref_dnd_time_enabled_summ">Allows you to prevent any notifications from being sent from Pebble
        Notifier to your Pebble
    </string>
    <string name="pref_dnd_time_enabled">Quiet time</string>
    <string name="pref_dnd_time_before_summ">No notifications before this time</string>
    <string name="pref_dnd_time_before">Quiet time - Not before</string>
    <string name="pref_dnd_time_after_summ">No notifications after this time</string>
    <string name="pref_dnd_time_after">Quiet time - Not after</string>
    <string name="pref_cat_dnd_quiet">Quiet hours</string>
    <string name="pref_donate_summ">Donations help development so if you like Pebble Notifier, please donate by clicking
        here.
    </string>
    <string name="pref_donate">Donate</string>
    <string name="pref_about">About</string>
    <string name="easter_dialog_text">Hello Pebble Notifier user,\n\nThank you for your curiosity. I wish I had something I could offer you for finding this message but I\'m just a college student giving this app away for free. I feel like app functionality should be complete for all users and because of this I\'ve included all of the functionality of the application to everybody, not just those who find this message. Due to these feelings this little message is pretty boring.\n\nAs a sorry for doing a lame hidden message you can email me at dattasmoon@gmail.com asking to be in the beta community. You\'ll be able to receive updates on upcoming features and help test my code before it goes out to the public!\n\nThank you for using my application,\n-Dattas Moonchaser\n
    </string>
    <string name="pref_no_ongoing_notif_summ">Android notifications that have the ongoing flag set are not sent to your
        Pebble
    </string>
    <string name="pref_no_ongoing_notif">Don\'t send ongoing notifications</string>
    <string name="text_change">I want this setting to change</string>
    <string name="text_tasker_setting">to this value</string>
    <string name="pref_convert_summ">Convert characters or text that are unsupported on the Pebble watch to readable characters before sending</string>
    <string name="pref_convert">Convert Characters or Text</string>
    <string name="confirm_delete">Do you want to delete</string>
    <string name="confirm">Yes</string>
    <string name="decline">No</string>
    <string name="empty_conversions">No conversions yet</string>
    <string name="empty_filter">No filters yet</string>
    <string name="use_regex">Use Regex\n(Advanced)</string>
    <string name="run_filter_against">Run against app</string>
    <string name="add">Add</string>
    <string name="pref_ignore_summ">List of words or regular expressions where if it matches, it will not send the notification to your Pebble</string>
    <string name="pref_ignore">Filter list</string>
    <string name="dialog_confirm_title">Confirmation</string>
    <string name="dialog_uncheck_message">Are you sure you want to uncheck all of the boxes below?</string>
    <string name="ignore_any">Any</string>
    <string name="dialog_title_rename_notification">Rename notification title?</string>
    <string name="dialog_title_remove_rename">Do you want to remove the rename for </string>
    <string name="error_cant_be_blank">This can\'t be blank</string>
    <string name="ignore_case_insensitive">Case\nInsensitive</string>

    <string name="pref_option_clear">Clear All Events</string>
    <string name="pref_option_clear_txt">"All events on device will be cleared, continue?"</string>
    <string name="pref_option_app_icon">Use App Icons</string>
    <string name="pref_option_app_icon_txt">Use the apps icon instead of notification icon for watch notifications</string>
    <string name="pref_option_launch_app">Launch Configuration App</string>
    <string name="pref_option_launch_app_txt">Select which notifications to show and other notification options</string>
    <string name="pref_key_clear">preference_key_clear</string>
    <string name="pref_key_app_icon">preference_key_app_icon</string>
    <string name="pref_key_launch_app">preference_key_launch_app</string>
    <string name="pref_sony_activity_title">Settings</string>
    <string name="clear_success">All events have been cleared</string>
    <string name="clear_failure">Failed to clear events</string>
    <string name="text_to_speech">New notification from</string>
    <string name="extension_name">Smart Watch Notifier</string>
    <string name="source_name">Notifier Source</string>

    <!-- A format string for breadcrumbs in the titlebar.  For left to right languages, such as English, the format will look something like "Main Activity > Sub Activity > Sub Activity 2".  Item #1 is the previous path, item #2 is the separator, and item #3 is the current item.  For most left to right languages, this shouldn't need to be changed. -->
    <string name="twofortyfouram_locale_breadcrumb_format" tools:ignore="UnusedResources">%1$s%2$s%3$s</string>

    <!-- The separator character for breadcrumbs.  For most left to right languages, this shouldn't need to be changed. -->
    <string name="twofortyfouram_locale_breadcrumb_separator" tools:ignore="UnusedResources">\u0020&gt;\u0020</string>
    
    <!-- The Don't Save button in the menu or Action Bar.  MDPI 21 character maximum -->
    <string name="twofortyfouram_locale_menu_dontsave">Cancel</string>

    <!-- The Help button in the menu or Action Bar.  MDPI 21 character maximum -->
    <string name="twofortyfouram_locale_menu_help">Help</string>

    <!-- The Save button in the menu or Action Bar.  MDPI 21 character maximum -->
    <string name="twofortyfouram_locale_menu_save">Done</string>
</resources>