<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
            android:key="pref_cat_gen"
            android:title="@string/pref_cat_gen" >
        <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_notif_only"
                android:summary="@string/pref_notif_only_summ"
                android:title="@string/pref_notif_only" />
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_fetch_notif_extras"
                android:summary="@string/pref_fetch_notif_extras_summ"
                android:title="@string/pref_fetch_notif_extras" />
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_no_ongoing_notif"
                android:summary="@string/pref_no_ongoing_notif_summ"
                android:title="@string/pref_no_ongoing_notif" />
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_dont_throw_many_time" android:title="@string/pref_dont_throw_many_time"/>
        <com.dattasmoon.pebble.plugin.ConvertPreference
                android:defaultValue="[]"
                android:key="pref_converts"
                android:summary="@string/pref_convert_summ"
                android:title="@string/pref_convert" />
        <com.dattasmoon.pebble.plugin.IgnorePreference
                android:defaultValue="[]"
                android:key="pref_ignore"
                android:summary="@string/pref_ignore_summ"
                android:title="@string/pref_ignore" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_cat_dnd"
        android:title="@string/pref_cat_dnd" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_notif_screen_on"
            android:summary="@string/pref_notif_screen_on_summ"
            android:title="@string/pref_notif_screen_on" />
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_dnd_time_enabled"
                android:summary="@string/pref_dnd_time_enabled_summ"
                android:title="@string/pref_dnd_time_enabled" />
            <com.dattasmoon.pebble.plugin.TimePreference
                android:key="pref_dnd_time_before"
                android:dependency="pref_dnd_time_enabled"
                android:summary="@string/pref_dnd_time_before_summ"
                android:title="@string/pref_dnd_time_before"
                android:defaultValue="06:00" />
            <com.dattasmoon.pebble.plugin.TimePreference
                android:key="pref_dnd_time_after"
                android:dependency="pref_dnd_time_enabled"
                android:summary="@string/pref_dnd_time_after_summ"
                android:title="@string/pref_dnd_time_after"
                android:defaultValue="21:00" />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_about"
            android:key="About" >
        <Preference
                android:title="@string/pref_donate"
                android:key="pref_donate"
                android:summary="@string/pref_donate_summ" />
    </PreferenceCategory>

</PreferenceScreen>